Changes to home and navbar

--- a/PawsClaws/Pages/Index.cshtml
+++ b/PawsClaws/Pages/Index.cshtml
@@ -5,22 +5,32 @@
 }
     <div class="container-fluid">
         <div class="row">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000" style="width:900px !important">
+                    <div id="myCarousel" class="carousel slide center-block" data-ride="carousel" data-interval="6000" style="width:900px">
                         <ol class="carousel-indicators">
                             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myCarousel" data-slide-to="1"></li>
                             <li data-target="#myCarousel" data-slide-to="2"></li>
                         </ol>
-                        <div class="carousel-inner" role="listbox" style="height: 600px !important;">
+                        <div class="carousel-inner" role="listbox" style="height: 600px">
                             <div class="item active">
-                                <a asp-page="/Pets/Index"><img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" /></a>
+                                <a href="https://www.facebook.com/nicholaspethaven/"><img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" /></a>
                             </div>
                             <div class="item">
-                                <a asp-page="/Contact"><img src="~/images/Nic.jpg" alt="NicPic" class="img-responsive" /></a>
+                                <a asp-page="/Contact"><img src="~/images/CatLogo.jpg" alt="NicPic" class="img-responsive" /></a>
+                                <div class="carousel-caption" role="option">
+                                    <p>
+                                        Click here to contact us
+                                    </p>
+                                </div>
                             </div>
                             <div class="item">
-                                <a asp-page="/About"><img src="~/images/OurStoryPic.jpg" alt="About page" class="img-responsive" /></a></div>
-                        </div>
+                                <a asp-page="/About"><img src="~/images/OurStoryPic.jpg" alt="About page" class="img-responsive" /></a>
+                                <div class="carousel-caption" role="option">
+                                    <p>
+                                        Click here to learn more
+                                    </p>
+                                </div>
+                            </div>
                         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
@@ -32,42 +42,27 @@
                     </div>
         </div>
             <div class="row">
-                <div class="col-md-3">
-                    <h2>Application uses</h2>
-                    <ul>
-                        <li>Sample pages using ASP.NET Core Razor Pages</li>
-                        <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h2>How to</h2>
-                    <ul>
-                        <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h2>Overview</h2>
-                    <ul>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h2>Run &amp; Deploy</h2>
-                    <ul>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-                    </ul>
+                <div class="container" style="width:900px !important; padding-top:15px !important; padding:0;">
+                    <div class="col-md-6" style="padding-left:0px;">
+                        <div class="card">
+                            <img src="~/images/cat.jpg" class="card-img-top" style="width:420px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6" style="padding-left:0px;">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
     </div>
