--- a/PawsClaws/Pages/Pets/Create.cshtml
+++ b/PawsClaws/Pages/Pets/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pet.Name" class="control-label"></label>
@@ -77,6 +77,12 @@
                 <label asp-for="Pet.Description" class="control-label"></label>
                 <input asp-for="Pet.Description" class="form-control" />
                 <span asp-validation-for="Pet.Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    <p>Add one or more photos of the animal:</p>
+                    <input type="file" name="Files" accept="image/png, image/jpg, image/jpeg" multiple/>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
