--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -5,151 +5,59 @@
     ViewData["Title"] = "Pets";
 }
 
-<h2>Pets</h2>
+<h2 style="text-align: center;">Pets</h2>
 
-<h4>
+<h4 style="text-align: center; word-spacing: 50px;">
     <a href="~/Pets/">All</a>
-    <a href="~/Pets?Species=Cat">Cats</a>
-    <a href="~/Pets?Species=Dog">Dogs</a>
+    <a href="~/Pets/Cat">Cats</a>
+    <a href="~/Pets/Dog">Dogs</a>
 </h4>
 
 <head>
     <style type="text/css">
-        .petBoxes {
+        #mainBox {
+            display: table;
+            background-color: dimgray;
+            border: 1px solid #000000;
+            height: 100%;
+            width: 100%;
+            margin: auto;
+            padding: 5% 5% 5% 7%;
+            align-items: center;
+        }
+
+        #mainBox > div {
+            display: table-cell;
             background-color: aliceblue;
             border: 1px solid black;
-            height: 120px;
-            padding: 10px 10px 10px 10px;
+            height: 205px;
+            width: 270px;
+            padding: 10px;
             text-align: center;
         }
     </style>
 
-    <style type="text/css">
-        .mainBox {
-            background-color: dimgray;
-            border: 1px solid #000000;
-            height: 100%;
-            padding: 100px 50px 100px 50px;
-        }
-    </style>
 </head>
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<!--
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Name)
-            </th>
 
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Species)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Breed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Sex)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Size)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Color)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].FurLength)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].DateOfBirth)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Spay_Neuter)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].ShotsUTD)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].AtShelter)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Pet[0].Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Pet)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Species)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Breed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sex)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Size)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FurLength)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Spay_Neuter)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShotsUTD)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AtShelter)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
--->
 
 <body>
-    <div class="container-fluid mainBox">
-        <div class="row">
-            @foreach (var item in Model.Pet)
-            {
-                <div class="col-xs-8 col-sm-4 col-md-2 col-lg-2 petBoxes">
-                    <a href="~/Pets/Details?id=@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
+    <div class="container-fluid" id="mainBox">
+       @foreach (var item in Model.Pet)
+        {
+            <div class="col-lg-6 col-md-4 col-sm-2 col-xs-1">
+                <div class="align-top">
+                    <a href="/Pets/Details/@item.ID"><img src="~/images/@item.ID/thumb.jpg" /> </a>
+                </div>
+                <div class="align-bottom">
+                    <a href="/Pets/Details/@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
                     @Html.DisplayFor(modelItem => item.Sex) :: @Html.DisplayFor(modelItem => item.Age)
                 </div>
-            }
-        </div>
+            </div>
+        }
     </div>
 </body>
+ 
