--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="font-family:Cambria; font-size:large;">    
+    <nav class="navbar navbar-default navbar-fixed-top" style="font-family:cursive; font-size:large;">    
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
