Tinkered a little more with Pet page layouts.
-Added the carousel to the Edit page. I'm looking to add a means to delete images from the carousel directly, and add new images from that page, but I haven't figured it out yet.

-TODO: Gonna tweak the layout for the create page.

-TODO: Gonna at least allow images to be added on the edit page.

-TODO: Login stuff, polish stuff.

--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Pets";
 }
 
-<h2 style="text-align: center;">Pets</h2>
 
-<h4 style="text-align: center; word-spacing: 50px;">
+
+<h4 style="text-align: center; word-spacing: 50px; margin-top: 3%;">
     <a href="~/Pets/">All</a>
     <a href="~/Pets/Cat">Cats</a>
     <a href="~/Pets/Dog">Dogs</a>
