--- a/PawsClaws/Pages/Pets/Edit.cshtml
+++ b/PawsClaws/Pages/Pets/Edit.cshtml
@@ -5,12 +5,85 @@
     ViewData["Title"] = "Edit";
 }
 
+<style>
+    #row{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+    }
+    #left{
+        display:flex;
+        flex-direction:column;
+        width: 45%;
+        justify-content: center;
+    }
+    #right{
+        display:flex;
+        flex-direction:column;
+        width: 45%;
+        justify-content: center;
+    }
+</style>
+
 <h2>Edit</h2>
 
 <h4>Pet</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row" id="row">
+    <div id="left">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" style="width:100% !important;">
+            <ol class="carousel-indicators">
+                @{
+                    int i = 0;
+                    foreach (var f in Model.Images)
+                    {
+                        if (i == 0)
+                        {
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        }
+                        else
+                        {
+                            <li data-target="#myCarousel" data-slide-to="@i"></li>
+
+                        }
+                        i++;
+                    }
+                }
+            </ol>
+            <div class="carousel-inner" role="listbox" style="height: 100% !important;">
+                @{
+                    i = 0;
+                    foreach (var f in Model.Images)
+                    {
+                        if (i == 0)
+                        {
+                            <div class="item active">
+                                <img src="~/images/@Model.Pet.ID/@(i + ".jpg")" class="img-responsive" style="height:100%; width:100%;" />
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="item">
+                                <img src="~/images/@Model.Pet.ID/@(i + ".jpg")" class="img-responsive" style="height:100%; width:100%;" />
+                            </div>
+                        }
+                        i++;
+                    }
+                }
+
+            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+    </div>
+    <div class="col-md-4" id="right">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Pet.ID" />
