Final layout changes to home screen

--- a/PawsClaws/wwwroot/css/site.css
+++ b/PawsClaws/wwwroot/css/site.css
@@ -83,7 +83,7 @@ body {
 
 /* Style the back side */
 .flip-card-back {
-    background-color: red;
+    background-color: #e4333b;
     color: white;
     transform: rotateY(180deg);
 }
