--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="font-family:cursive; font-size:large;">    
+    <nav class="navbar navbar-default navbar-fixed-top" style="font-family:Candara; font-size:large; font-weight:bold;">    
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -49,7 +49,7 @@
     <partial name="_CookieConsentPartial" />
 
     
-    <div class="container-fluid body-content h-100" style="margin-top:25px">
+    <div class="container-fluid body-content h-100" style="margin-top:15px">
         @RenderBody() 
         <hr />
         <footer>
