--- a/PawsClaws/Pages/Index.cshtml
+++ b/PawsClaws/Pages/Index.cshtml
@@ -16,6 +16,10 @@
                 <div class="carousel-inner" role="listbox" style="height: 600px">
                     <div class="item active">
                         <a href="https://www.facebook.com/nicholaspethaven/"><img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" /></a>
+                        <div class="carousel-caption" role="option">
+                            <p>
+                                Click here to visit our Facebook page                            </p>
+                        </div>
                     </div>
                     <div class="item">
                         <a asp-page="/Contact"><img src="~/images/CatLogo.jpg" alt="NicPic" class="img-responsive" /></a>
@@ -44,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class="row center-block" style="margin-left:-1px;margin-right:0px;">
+        <div class="row center-block centercontent" style="margin-left:-1px;margin-right:0px;">
             <div class="flip-card col-sm-6">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -72,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="row center-block" style="margin-left:-1px;margin-right:0px;">
+        <div class="row center-block centercontent" style="margin-left:-1px;margin-right:0px;">
             <div class="flip-card col-sm-6">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -98,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <div class="row center-block" style="margin-left:-1px;margin-right:0px;">
+        <div class="row center-block centercontent" style="margin-left:-1px;margin-right:0px;">
             <div class="flip-card col-sm-6" style="height:300px;">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
