Some nice changes to the Pet index page.
-Added pagination support. The main box now displays 12 pets at once, with a set of page controls below the box. I haven't fully tested this yet as I currently only have 7 pets in the DB. Tomorrow I would like to flush my current test values and fill the DB with realistic test data, so that will put it to the test.

-Certain elements now display differently when logged in. While logged out, the only control on the main Pet page is "Login", and the only control on the Details page is "Back to list". While logged in, the main page controls are "Logout" and "Create new", and the Details controls are "Edit", "Delete", and "Back to list".

-Other minor design tweaks that are just escaping me right now.

-TODO: Tweak the behavior of the Create page when improper values are input.

-TODO: Allow for image modification on the Edit page.

-TODO: Test invalid username/password inputs.

-TODO: Allow for password resets.

-TODO: Add test data and thoroughly test all aspects of the page.

--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PawsClaws</title>
+    <title>@ViewData["Title"] - Nicholas Pet Haven</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -33,7 +33,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="col-md-2"><a asp-page="/Index">Home <img src="~/images/PawPrint.png" width="30" height="30" style="padding:5px; padding-bottom:8px !important;" /></a></li>
-                    <li class="col-md-2"><a asp-page="/Pets/Index">Pets <img src="~/images/PawPrint.png" width="30" height="30" style="padding:5px; padding-bottom:8px !important;" /></a></li>
+                    <li class="col-md-2"><a asp-page="/Pets/Index" asp-route-CurrentPage="1">Pets <img src="~/images/PawPrint.png" width="30" height="30" style="padding:5px; padding-bottom:8px !important;" /></a></li>
                     <li class="col ">
                         <a asp-page="/Index" id="homePic" class="navbar-brand mx-auto" style="position:center !important;">
                             <img src="~/images/Logo.jpg" height="100" width="100" class="img-circle border-dark"/>
