--- a/PawsClaws/Pages/Login.cshtml
+++ b/PawsClaws/Pages/Login.cshtml
@@ -5,7 +5,7 @@
 }
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<body>
+<body style="margin-top: 2%">
     <p>Employee Login</p>
     <form method="post">
         <div asp.validation-summary="All" class="text-danger"></div>
