--- a/PawsClaws/Pages/Pets/Details.cshtml
+++ b/PawsClaws/Pages/Pets/Details.cshtml
@@ -77,6 +77,17 @@
                     <span class="sr-only">Next</span>
                 </a>
         </div>
+        <div style="text-align:center">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a asp-page="./Delete" asp-route-id="@Model.Pet.ID">Delete</a>
+                <span> | </span>
+                <a asp - page="./Edit" asp - route - id="@Model.Pet.ID"> Edit </a>
+                <span> | </span>
+            }
+
+            <a asp-page="./Index">Back to List</a>
+        </div>
     </div>
     <div id="right">
         <hr />
@@ -163,8 +174,4 @@
     </div>
 </div>
 
-<div>
-    <a asp-page="./Delete" asp-route-id="@Model.Pet.ID">Delete</a> |
-    <a asp-page="./Edit" asp-route-id="@Model.Pet.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
+
