--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -1,25 +1,15 @@
-﻿@page "{Species?}"
+﻿@page "{CurrentPage}/{Species?}"
 @model PawsClaws.Pages.Pets.IndexModel
 
 @{
     ViewData["Title"] = "Pets";
 }
 
-
-
-<h4 style="text-align: center; word-spacing: 50px; margin-top: 3%;">
-    <a href="~/Pets/">All</a>
-    <a href="~/Pets/Cat">Cats</a>
-    <a href="~/Pets/Dog">Dogs</a>
-</h4>
-
-
-
 <head>
     <style type="text/css">
         #mainBox {
             display: table;
-            background-color: dimgray;
+            background-color: #7d7d7d;
             border: 1px solid #000000;
             height: 100%;
             width: 100%;
@@ -27,7 +17,6 @@
             padding: 5% 5% 5% 7%;
             align-items: center;
         }
-
             #mainBox > div {
                 display: table-cell;
                 background-color: aliceblue;
@@ -37,20 +26,50 @@
                 padding: 10px;
                 text-align: center;
             }
-
-        #
     </style>
-
 </head>
 
-<p style="text-align:right">
-    <a asp-page="Create">Create New</a> | <a href="~/Logout">Logout</a>
-</p>
-
-
-
-
 <body>
+    <h4 style="text-align: center; word-spacing: 40px; margin-top: 3%;">
+        @if (string.IsNullOrEmpty(Model.Species))
+        {
+            <span style="text-decoration:underline">All</span>
+        }
+        else
+        {
+            <a href="~/Pets/1">All</a>
+        }
+
+        @if (Model.Species == "Cat")
+        {
+            <span style="text-decoration:underline">Cats</span>
+        }
+        else
+        {
+            <a href="~/Pets/1/Cat">Cats</a>
+        }
+        @if (Model.Species == "Dog")
+        {
+            <span style="text-decoration:underline">Dogs</span>
+        }
+        else
+        {
+            <a href="~/Pets/1/Dog">Dogs</a>
+        }
+    </h4>
+    <p style="text-align:right">
+
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a asp-page="Create">Create New</a>
+            <span> | </span>
+            <a href="Logout">Logout</a>
+        }
+        else
+        {
+            <a href="~/Login">Login</a>
+        }
+    </p>
     <div class="container-fluid" id="mainBox">
         @foreach (var item in Model.Pet)
         {
@@ -64,5 +83,31 @@
                 </div>
             </div>
         }
+        
+        
     </div>
+    <p style="text-align:center; word-spacing:10px">
+        @if(Model.CurrentPage == Model.FirstPage)
+        {
+            <span style="text-decoration-color:dimgrey">Previous</span>
+        }
+        else
+        {
+            <a href="/Pets/@Model.PrevPage/@Model.Species">Previous</a>
+        }
+        
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            <a href="/Pets/@i/@Model.Species">@i</a>
+        }
+
+        @if(Model.CurrentPage == Model.TotalPages)
+        {
+            <span style="text-decoration-color:dimgrey">Next</span>
+        }
+        else
+        {
+            <a href="/Pets/@Model.NextPage/@Model.Species">Next</a>
+        }
+    </p>
 </body>
