--- a/PawsClaws/wwwroot/css/site.css
+++ b/PawsClaws/wwwroot/css/site.css
@@ -39,7 +39,7 @@ body {
         display: none;
     }
     .hide-me {
-        display: none;
+        display: none !important;
     }
 
     .centercontent {
