Fixed a login/logout bug.

--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -63,7 +63,7 @@
         {
             <a asp-page="Create">Create New</a>
             <span> | </span>
-            <a href="Logout">Logout</a>
+            <a href="~/Logout">Logout</a>
         }
         else
         {
