The Pets page is now fully presentational.
-Moved from the container system to a card system for the Pet page. Also played with styling until I was happy with the look of the boxes.

-Tweaked page layouts for all page layouts. Something deep inside me seriously clicked and I suddenly get CSS to a much higher degree so I did a lot of things that I've been wanting to do for a while visually.

-Fixed some odd behaviors here and there. Don't ask me what, I can't remember right now.

-Finally, at long last, the test database is open for remote access. There were those that said it couldn't be done (including me for a while).

-Flushed the old test subjects and added a new, cleaner set of 13 pets.

--- a/PawsClaws/Pages/Pets/Edit.cshtml
+++ b/PawsClaws/Pages/Pets/Edit.cshtml
@@ -6,30 +6,29 @@
 }
 
 <style>
-    #row{
-        display:flex;
-        flex-direction:row;
-        justify-content:space-around;
+    #row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
-    #left{
-        display:flex;
-        flex-direction:column;
+
+    #left {
+        display: flex;
+        flex-direction: column;
         width: 45%;
-        justify-content: center;
+        padding: 2%
     }
-    #right{
-        display:flex;
-        flex-direction:column;
+
+    #right {
+        display: flex;
+        flex-direction: column;
         width: 45%;
         justify-content: center;
     }
 </style>
 
-<h2>Edit</h2>
 
-<h4>Pet</h4>
-<hr />
-<div class="row" id="row">
+<div class="row" id="row" style="padding: 3% 10% 0% 10%">
     <div id="left">
         <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" style="width:100% !important;">
             <ol class="carousel-indicators">
@@ -84,6 +83,10 @@
 
     </div>
     <div class="col-md-4" id="right">
+        <div>
+            <h2>Edit Pet Info</h2>
+            <a asp-page="Index" asp-route-CurrentPage="1">Back to List</a>
+        </div>
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Pet.ID" />
@@ -159,9 +162,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
