--- a/PawsClaws/Pages/Pets/Create.cshtml
+++ b/PawsClaws/Pages/Pets/Create.cshtml
@@ -5,13 +5,46 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<style>
+    #row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
 
-<h4>Pet</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" enctype="multipart/form-data">
+    #left {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        padding: 7%
+    }
+
+    #right {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        justify-content: center;
+    }
+</style>
+
+
+
+<form method="post" enctype="multipart/form-data">
+    <div class="row" id="row" style="padding:3% 15% 0% 15%">
+
+        <div class="container" id="left">
+
+            <div class="form-group">
+                <p>Add one or more photos of the animal:</p>
+                <p>Hint: Hold Ctrl while selecting pictures to upload multiple</p>
+                <input type="file" name="Files" accept="image/png, image/jpg, image/jpeg" multiple />
+            </div>
+        </div>
+        <div class="container" id="right">
+            <div>
+                <h2>New Pet Info</h2>
+                <a asp-page="Index" asp-route-CurrentPage="1">Back to List</a>
+            </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pet.Name" class="control-label"></label>
@@ -79,21 +112,12 @@
                 <span asp-validation-for="Pet.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="col-md-10">
-                    <p>Add one or more photos of the animal:</p>
-                    <input type="file" name="Files" accept="image/png, image/jpg, image/jpeg" multiple/>
-                </div>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
