--- a/PawsClaws/Pages/Pets/Delete.cshtml
+++ b/PawsClaws/Pages/Pets/Delete.cshtml
@@ -5,96 +5,170 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<style>
+    #row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Pet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.AtShelter)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.AtShelter)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Species)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Species)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Breed)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Breed)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Sex)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Sex)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Size)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Size)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Spay_Neuter)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Spay_Neuter)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.ShotsUTD)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.ShotsUTD)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Color)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Color)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.FurLength)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.FurLength)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.DateOfBirth)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.DateOfBirth)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Age)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Age)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pet.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pet.Description)
-        </dd>
-    </dl>
+    #left {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        justify-content: center;
+    }
 
-    <form method="post">
-        <input type="hidden" asp-for="Pet.ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+    #right {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        justify-content: center;
+    }
+</style>
+
+
+<div id="row" style="padding: 5%">
+    <div id="left">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" style="width:100% !important;">
+            <ol class="carousel-indicators">
+                @{
+                    int i = 0;
+                    foreach (var f in Model.Images)
+                    {
+                        if (i == 0)
+                        {
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        }
+                        else
+                        {
+                            <li data-target="#myCarousel" data-slide-to="@i"></li>
+
+                        }
+                        i++;
+                    }
+                }
+            </ol>
+            <div class="carousel-inner" role="listbox" style="height: 100% !important;">
+                @{
+                    i = 0;
+                    foreach (var f in Model.Images)
+                    {
+                        if (i == 0)
+                        {
+                            <div class="item active">
+                                <img src="~/images/@Model.Pet.ID/@(i + ".jpg")" class="img-responsive" style="height:100%; width:100%;" />
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="item">
+                                <img src="~/images/@Model.Pet.ID/@(i + ".jpg")" class="img-responsive" style="height:100%; width:100%;" />
+                            </div>
+                        }
+                        i++;
+                    }
+                }
+
+            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div id="right">
+        <h3 style="text-align:center">Are you sure you want to delete this pet? This cannot be undone.</h3>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.AtShelter)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.AtShelter)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Species)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Species)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Breed)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Breed)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Sex)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Sex)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Size)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Size)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Spay_Neuter)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Spay_Neuter)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.ShotsUTD)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.ShotsUTD)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Color)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Color)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.FurLength)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.FurLength)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.DateOfBirth)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.DateOfBirth)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Age)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Age)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Pet.Description)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pet.Description)
+            </dd>
+        </dl>
+
+        <form method="post" style="text-align:center">
+            <input type="hidden" asp-for="Pet.ID" />
+            <input type="submit" value="Delete" class="btn btn-default" /> <br/>
+            <a asp-page="./Index">Back to List</a>
+        </form>
+    </div>
 </div>
+
