I changed up the About page a bit.

--- a/PawsClaws/Pages/Contact.cshtml
+++ b/PawsClaws/Pages/Contact.cshtml
@@ -94,7 +94,9 @@
             <div id="form-block" class="col-md-6">
                 <div id="contacForm">
                     <h1>Your Information</h1>
-                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                    <!--Contact form-->
+                    <form id="contact-form" name="contact-form" action="index.php" method="POST">
 
                         <!--Grid row-->
                         <div class="row">
@@ -142,7 +144,6 @@
                             </div>
                         </div>
                         <!--Grid row-->
-
                     </form>
 
                     <div class="text-center text-md-left">
@@ -156,3 +157,5 @@
 
     </div>
 </div>
+
+
