--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -4,80 +4,144 @@
     ViewData["Title"] = "About";
 }
 
-<!--<h3>@Model.Message</h3>-->
 
 <style>
-    .wrapper-class{
-        width:100%;
+    .wrapper-class {
+        width: 100%;
+        margin-top: 0px;
+    }
+
+    .inner-wrapper {
+        margin-left: 1%;
+        margin-right: 1%;
+        padding-top: 35px;
+    }
+
+    .background-div {
+        width: 100%;
+        height: 50%;
+    }
+
+    .justify-content-sm-center {
+        padding-left: 5%;
+        padding-right: 5%;
+        text-align: center;
+    }
+
+    #story-wrapper{
+        text-align:left;
+        font-family:'Times New Roman', serif;
+    }
+
+    .story-section {
+        padding-top: 15px;
+    }
+
+    .inner-call-to-action{
+        text-align:left;
+        font-family:'Times New Roman', serif;
+    }
+
+    .people_image {
+        width: 100%;
         margin-top:45px;
     }
 
-    .inner-wrapper{
-        padding-left:5px;
-        padding-right:5px;
+    .row {
+        margin-right: -15px;
     }
 
-    .description-section{
-       
-    }
-
-    .dog_image{
+    .img-fluid {
         width: 100%;
     }
 
-    .row{
-        margin-right:-15px;
+    h1 {
+        font-family:'Times New Roman', Times, serif;
+        font-size: 65px;
+        font-weight: 100;
     }
 
-    .img-fluid{
-        width:100%;
+    p {
+        font-family: Helvetica,Arial,Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 18px;
     }
+
+  
+
 </style>
 
-<div  class="wrapper-class">
-    <div class="inner-wrapper">
-        
-        <div class="row justify-content-around">
-            <div class="col-md-7">
-                <h2>@ViewData["Title"]</h2>
-            </div>
-            <div class="w-100"></div>
-            <div class="col-md-8">
-                <div class="description-section">
-                    <h2>Our Story</h2>
-                    <div class="story-section">
-                        <p>
-                            Nicholas Pet Haven was started by Nicholas Nash when he was only 13. 
-                            He is now 19 and has helped rescue so many animals and made some major changes for the dogs and cats. 
-                            Please support his efforts as we continue to grow. 
-                            Our Adoption House is located at 12903 Hwy 155 South in Tyler  TX. 
-                            Come meet our sweet rescued babies available for adoption! 
-                            We are open from 10am-2pm, Monday-Saturday. 
-                            If you are interested but need to meet at a different time, please contact us at the phone number provided or by messaging us. 
-                            Thank you for your support!
-                        </p>
+<div class="wrapper-class">
 
-                        <p>
-                            The stranger officiates the meal.
-                            He ran out of money, so he had to stop playing poker.
-                            Lets all be unique together until we realise we are all the same.
-                            She wrote him a long letter, but he didn't read it.
-                            If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you?
-                            He said he was not there yesterday; however, many people saw him there.
-                            I will never be this young again. Ever. Oh damn… I just got older.
-                            I really want to go to work, but I am too sick to drive.
-                            I am happy to take your donation; any amount will be greatly appreciated.
-                            A glittering gem is not enough.
-                        </p>
+    <div class="inner-wrapper">
+        <div class="justify-content-sm-center">
+            <div class="flex-sm-row">
+
+                <div class="flex-sm-row">
+                    <div class="flex-sm-column">
+                        <div class="background-div">
+                            <div class="justify-content-sm-center">
+                                <h1>Our Story</h1>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="dog_image">
-                    <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/73292707_2484053138315378_3667788408769478656_n.jpg?_nc_cat=100&_nc_oc=AQkMy8AlLgiQkwWXjEFY2mjSEnR5bJDAcnvylOyDhYVFFhZGd-2YEW4BptJyYwoW9a4&_nc_ht=scontent-dfw5-1.xx&oh=f055eecbd135ecaad5d22d86fffc9734&oe=5E5EA7EE" class="img-fluid" />
-                </div>
-            </div>
-        </div>
 
+                <div class="w-100"></div>
+
+                <div class="flex-sm-row">
+                    <div class="flex-sm-column">
+                        <div class="people_image">
+                            <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/76605032_2540764819310876_2961002272642826240_o.jpg?_nc_cat=102&_nc_ohc=I1LWDS2gMm8AQkN_fuPBpEQ1WIHFOTFVB8wIp9UKh8hbH6v9GK1290Pvw&_nc_ht=scontent-dfw5-2.xx&oh=5e62b86b28c9c8fab838632dade6a955&oe=5E81615A" class="img-fluid" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-100"></div>
+
+                <div class="flex-sm-row">
+                    <div class="flex-sm-column">
+                        <div class="wrapper">
+                            <div id="story-wrapper">
+                                <h1>How We Started</h1>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-sm-row">
+                    <div class="flex-sm-column">
+                        <div id="story-wrapper" class="story-section">
+                            <p>
+                                Nicholas Pet Haven was started by Nicholas Nash when he was only 13.
+                                He is now 19 and has helped rescue so many animals and made some major changes for the dogs and cats.
+                                Please support his efforts as we continue to grow.
+                                Our Adoption House is located at 12903 Hwy 155 South in Tyler  TX.
+                                Come meet our sweet rescued babies available for adoption!
+                                We are open from 10am-2pm, Monday-Saturday.
+                                If you are interested but need to meet at a different time, please contact us at the phone number provided or by messaging us.
+                                Thank you for your support!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-sm-row">
+                    <div class="flex-sm-column">
+                        <div class="call-to-action">
+                            <div class="inner-call-to-action">
+                                <h2>Interested in Volunteering? </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
     </div>
+        
+
 </div>
