--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -142,6 +142,7 @@
                     </div>
                 </div>
 
+                <!--Links row-->
                 <div class="row">   
                    <!--First column-->
                         <div class="col-md-6">
